openshift/base/infrastructure/kafka/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airlines-kafka
  namespace: airlines-backend-microservices
  labels:
    app: airlines-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airlines-kafka
  template:
    metadata:
      labels:
        app: airlines-kafka
    spec:
      containers:
        - name: zookeeper
          image: wurstmeister/zookeeper
          ports:
            - containerPort: 2181
        - name: airlines-kafka
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
